# chatterbot

./: .gitignore  docker-compose.yaml  pyproject.toml
src/chatbot/instances/: chatbots.py  generators.py  knowledgebases.py  matchers.py  toolboxes.py  vectorizers.py
src/chatbot/interfaces/: arghandler.py  batch.py  chatbot.py  chatbots.py  shared_decoration.py  toolbox.py
src/instances/: instructors.py  knowledgebases.py  vectorizers.py
src/interfaces/: chatbot.py
tests/: test_arghandler.py  test_batch.py  test_chatbot.py  test_chatbots.py  test_generators.py  test_instructors.py  test_knowledgebases.py  test_matchers.py  test_shareddecoration.py  test_toolbox.py  test_vectorizers.py
