[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"


[project]
name = "chatbot"
version = "0.1.0"
description = "<todo>"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "inference[local]",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "weaviate-client>=4.17.0",
]

[tool.uv.sources]
inference = { git = "https://github.com/BMLN/inference.git" }


[tool.uv_build]
packages = [
    { include = "chatbot", from = "src" }
]